created login page, styled loaders, and my offers page, and also matches page. Applied various stylings in various parts

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<style>
+	body,
+	html {
+		height: 100%;
+		width: 100%;
+		margin: 0;
+	}
+</style>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
